13_ingresses/kubernetes/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-demo-app-blue
  name: python-demo-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-demo-app-blue
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-demo-app-blue
    spec:
      containers:
      - image: registry.workshop.kumina.net/common/demo-app:colored
        imagePullPolicy: Always
        name: python-demo-app-blue
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 9999
          name: metrics
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: workshop-registry
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-demo-app-green
  name: python-demo-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-demo-app-green
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-demo-app-green
    spec:
      containers:
      - image: registry.workshop.kumina.net/common/demo-app:colored
        imagePullPolicy: Always
        name: python-demo-app-green
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 9999
          name: metrics
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: workshop-registry
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-demo-app-red
  name: python-demo-app-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-demo-app-red
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-demo-app-red
    spec:
      containers:
      - image: registry.workshop.kumina.net/common/demo-app:colored
        imagePullPolicy: Always
        name: python-demo-app-red
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 9999
          name: metrics
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: workshop-registry
      dnsPolicy: ClusterFirst
      restartPolicy: Always
