13_ingresses/kubernetes/app_services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-demo-app-blue
  name: python-demo-app-blue
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-demo-app-blue
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-demo-app-blue
  name: python-demo-app-metrics-blue
spec:
  ports:
  - port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: python-demo-app-blue
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-demo-app-green
  name: python-demo-app-green
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-demo-app-green
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-demo-app-green
  name: python-demo-app-metrics-green
spec:
  ports:
  - port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: python-demo-app-green
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-demo-app-red
  name: python-demo-app-red
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-demo-app-red
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-demo-app-red
  name: python-demo-app-metrics-red
spec:
  ports:
  - port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: python-demo-app-red
