13_ingresses/kubernetes/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-demo-app-blue
spec:
  rules:
  - host: python-demo-app.nl
    http:
      paths:
      - backend:
          service:
            name:  python-demo-app-blue
            port:
              number: 8080
        path: /blue
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-demo-app-green
spec:
  rules:
  - host: python-demo-app.nl
    http:
      paths:
      - backend:
          service:
            name:  python-demo-app-green
            port:
              number: 8080
        path: /green
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-demo-app-red
spec:
  rules:
  - host: python-demo-app.nl
    http:
      paths:
      - backend:
          service:
            name:  python-demo-app-red
            port:
              number: 8080
        path: /red
        pathType: ImplementationSpecific
